--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/eroux13/pwa_budget_tracker#readme",
   "dependencies": {
+    "chalk": "^4.1.1",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "lite-server": "^2.6.1",
